# postgres-lsp

./: CLAUDE.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  release.yaml
crates/pg-analysis/: Cargo.toml
crates/pg-analysis/src/: code_actions.rs  completion.rs  hover.rs  index.rs  lib.rs  resolve.rs  signature.rs  symbols.rs
crates/pg-format/: Cargo.toml
crates/pg-format/src/: formatter.rs  lib.rs
crates/pg-lsp/: Cargo.toml
crates/pg-lsp/src/: capabilities.rs  diagnostics.rs  main.rs  semantic_tokens.rs  server.rs
crates/pg-parse/: Cargo.toml
crates/pg-parse/examples/: dump_tree.rs
crates/pg-parse/src/: document.rs  injection.rs  lib.rs  parser.rs
crates/pg-schema/: Cargo.toml
crates/pg-schema/src/: catalog.rs  lib.rs
crates/postgres-lsp/: Cargo.toml
crates/postgres-lsp-analysis/: Cargo.toml
crates/postgres-lsp-analysis/src/: code_actions.rs  hover.rs  index.rs  lib.rs  signature.rs  symbols.rs
crates/postgres-lsp-format/: Cargo.toml
crates/postgres-lsp-format/src/: formatter.rs
crates/postgres-lsp-parse/: Cargo.toml
crates/postgres-lsp-parse/examples/: dump_tree.rs
crates/postgres-lsp-schema/: Cargo.toml
crates/postgres-lsp-schema/src/: catalog.rs  lib.rs
crates/postgres-lsp/src/: diagnostics.rs  main.rs  semantic_tokens.rs  server.rs
