[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/gmr/postgres-lsp"

[workspace.dependencies]
tree-sitter = "0.26"
tree-sitter-postgres = { path = "../tree-sitter-postgres" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
ropey = "1.6"
dashmap = "6"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
libpgfmt = "1"

[patch.crates-io]
tree-sitter-postgres = { path = "../tree-sitter-postgres" }
