[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/gmr/postgres-lsp"
readme = "README.md"

[workspace.dependencies]
postgres-lsp-parse = { path = "crates/postgres-lsp-parse", version = "1.0.1" }
postgres-lsp-analysis = { path = "crates/postgres-lsp-analysis", version = "1.0.1" }
postgres-lsp-format = { path = "crates/postgres-lsp-format", version = "1.0.1" }
postgres-lsp-schema = { path = "crates/postgres-lsp-schema", version = "1.0.1" }
tree-sitter = "0.26"
tree-sitter-postgres = "1.1"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
ropey = "1.6"
dashmap = "6"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
libpgfmt = "1"

