[package]
name = "pg-parse"
version = "0.1.0"
description = "PostgreSQL/PL-pgSQL document model with incremental tree-sitter parsing"
edition.workspace = true
license.workspace = true

[dependencies]
tree-sitter.workspace = true
tree-sitter-postgres.workspace = true
ropey.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
