[package]
name = "postgres-lsp-analysis"
version.workspace = true
description = "Symbol extraction, workspace index, and name resolution for PostgreSQL"
edition.workspace = true
license.workspace = true

[dependencies]
postgres-lsp-parse.workspace = true
tree-sitter.workspace = true
tree-sitter-postgres.workspace = true
dashmap.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
ropey.workspace = true
