[package]
name = "postgres-lsp-format"
version.workspace = true
description = "SQL formatting for the PostgreSQL LSP, powered by libpgfmt"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libpgfmt.workspace = true
thiserror.workspace = true

[dev-dependencies]
