[package]
name = "postgres-lsp-parse"
version.workspace = true
publish = false
description = "PostgreSQL/PL-pgSQL document model with incremental tree-sitter parsing"
edition.workspace = true
license.workspace = true

[dependencies]
tree-sitter.workspace = true
tree-sitter-postgres.workspace = true
ropey.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
