[package]
name = "postgres-lsp-schema"
version.workspace = true
description = "Live PostgreSQL database introspection via pg_catalog"
edition.workspace = true
license.workspace = true

[dependencies]
postgres-lsp-analysis.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
