[package]
name = "postgres-lsp"
version.workspace = true
description = "Language Server Protocol implementation for PostgreSQL and PL/pgSQL"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "postgres-lsp"
path = "src/main.rs"

[dependencies]
postgres-lsp-parse.workspace = true
postgres-lsp-analysis.workspace = true
postgres-lsp-format.workspace = true
postgres-lsp-schema.workspace = true
tree-sitter.workspace = true
tree-sitter-postgres.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
ropey.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive", "env"] }
